2013-08-28 Freja Nordsiek
	* Added "AD56X4." before function declarations in README.md.
	* Incremented version to 0.1 since the library appears to work.

2013-08-26 Freja Nordsiek
	* Fixed lack of time evolution bug in Four_Sine_Waves example.
	* Changed sine wave frequency to 10 Hz in Four_Sine_Waves
	  example.

2013-08-20 Freja Nordsiek
	* Added hardware documentation to AD56X4.* and README.md and
	  library documentation to README.md.

2013-08-19 Freja Nordsiek
	* Changed Four_Sine_Waves.ino to use builtin value of pi.
	* Made another powerUpDown overload call the private one.

2013-08-18 Freja Nordsiek
	* Hard wrapped function declaration lines that were too long.
	* Changed the private overloads of powerUpDown and setInputMode to
	  inline and made the public overloads call them. 

2013-08-17 Freja Nordsiek
	* Initial version.
	* Added example: examples/Four_Sine_Waves/Four_Sine_Waves.ino
	* Slightly modified license to original 3-clause BSD.
	* Added README.md